src/objects/CventEvents__SurveyQuestion__c.object
<CustomObject>
    <description>Represents Cvent survey question.</description>
    <fields>
        <fullName>CventEvents__AnswerFormat__c</fullName>
        <label>Answer Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__FullQuestionText__c</fullName>
        <label>Full Question Text</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CventEvents__IsObfuscated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Obfuscated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__QuestionCode__c</fullName>
        <label>Question Code</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__QuestionStub__c</fullName>
        <externalId>true</externalId>
        <label>Question Stub</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CventEvents__QuestionTagName__c</fullName>
        <externalId>true</externalId>
        <label>Question Tag Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__QuestionTagStub__c</fullName>
        <externalId>true</externalId>
        <label>Question Tag Stub</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__QuestionText__c</fullName>
        <label>Question Text</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__SurveyProgram__c</fullName>
        <label>Survey Program</label>
        <referenceTo>CventEvents__SurveyProgram__c</referenceTo>
        <relationshipLabel>Survey Questions</relationshipLabel>
        <relationshipName>SurveyQuestions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CventEvents__Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SingleChoice</fullName>
                </value>
                <value>
                    <fullName>MultiChoice</fullName>
                </value>
                <value>
                    <fullName>OpenEndedTextOneLine</fullName>
                </value>
                <value>
                    <fullName>OpenEndedTextCommentBox</fullName>
                </value>
                <value>
                    <fullName>OpenEndedDateTime</fullName>
                </value>
                <value>
                    <fullName>OpenEndedNumeric</fullName>
                </value>
                <value>
                    <fullName>NetPromoter</fullName>
                </value>
                <value>
                    <fullName>FileUpload</fullName>
                </value>
                <value>
                    <fullName>Rating</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Survey Question</label>
    <listViews>
        <fullName>CventEvents__All</fullName>
        <columns>NAME</columns>
        <columns>CventEvents__SurveyProgram__c</columns>
        <columns>CventEvents__QuestionText__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SQ-{00000000}</displayFormat>
        <label>Survey Question Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>